# SLAMA

./: .dockerignore  .editorconfig  .env.template  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  Dockerfile  LICENSE  README.md  SparkReadme.md  check_docs.py  docker-compose.yml  pyproject.toml  test
.github/: CONTRIBUTING.md
.github/workflows/: CI.yml
dev-tools/config/: docker-compose.yml  spark-job.yaml  spark-job.yaml.j2  spark-lama-data-pv-pvc.yaml  spark-lama-ns.yaml  spark-pod-driver-template.yaml  spark-pod-exec-template.yaml
dev-tools/docker/: Dockerfile  spark-lama-k8s.dockerfile  spark-lama.dockerfile  spark-pyspark-python.dockerfile
dev-tools/experiments/: dataset_utils.py  examples_utils.py  experiment-job.py  lama_experiments.py  launch.py  log_parsing.py  spark_experiments.py  tmp-calc-func.py  tmp-lama-tabular-preset.py  tmp-le-scaling.py  tmp-tabular-preset-automl.py  tmp_xgboost.py
dev-tools/performance_tests/: dataset_utils.py  lama_used_cars.py  launch.py  mlalgo_debug.py  spark_used_cars.py
dev-tools/spark-cluster-lama/: docker-compose.yml
docker/: slamactl  spark-lama.dockerfile
docker-hadoop/: .gitignore  Makefile  docker-compose.yml
docker-hadoop-kube/: hadoop.env  tmp-spark-history-server.yaml  yarn-cluster-pv-pvc.yaml  yarn-cluster.yaml  yarn-spark-submit.yaml
docker-hadoop-kube/base/: Dockerfile
docker-hadoop-kube/historyserver/: Dockerfile
docker-hadoop-kube/nodemanager/: Dockerfile
docker-hadoop-kube/resourcemanager/: Dockerfile
docker-hadoop-kube/spark-history-server/: Dockerfile  run.sh  spark-defaults.conf
docker-hadoop-kube/spark-submit/: Dockerfile  core-site.xml  submit.sh  submit_example.py  yarn-site.xml
docker-hadoop/base/: Dockerfile  entrypoint.sh
docker-hadoop/nginx/: bde-hadoop.css  default.conf
docker-hadoop/nodemanager/: Dockerfile
docker-hadoop/spark-submit/: Dockerfile  core-site.xml  yarn-site.xml
docker/jar-builder/: build.sh  scala.dockerfile
docker/spark-lama/: download_jars.py  spark-py-lama.dockerfile
docs/: automl.rst  conf.py  dataset.rst  index.rst  kubernetes_cluster.rst  ml_algo.rst  ml_algo.tuning.rst  pipelines.features.rst  pipelines.ml.rst  pipelines.rst  pipelines.selection.rst  reader.rst  report.rst  requirements.txt  slama_minikube_readme.rst  tasks.rst  transformers.rst  validation.rst  yarn_cluster.rst  yarn_cluster_spark_submit.rst
docs/pages/: Deployment.rst  Python-API.rst
docs/slama-docs/: kubernetes_cluster.rst  ml_algo.rst  pipelines.features.rst  pipelines.rst  pipelines.selection.rst  reader.rst  report.rst  slama_index.rst  slama_minikube_readme.rst  standalone_cluster.rst  tasks.rst  transformers.rst  yarn_cluster.rst
examples/: automl_feature_scores.py  automl_multiclass.py  demo_iterative_feature_importance.py  demo_optuna_tuner.py  examples_utils.py  lama-tabular-preset.py  simple_tabular_classification.py  simple_tabular_classification_used_cars.py  spark-ml-pipe-lgb.py  spark-ml-pipe-linearlgbfs.py  spark-report-deco.py  tabular-preset-automl.py  used_cars_example.py
examples/conf/: k8s_namespace.yaml
examples/data/: .gitignore
examples/spark/: automl_feature_scores.py  automl_multiclass.py  demo_iterative_feature_importance.py  demo_optuna_tuner.py  examples_utils.py  feature-processing-only.py  lama-tabular-preset.py  lgbm-parallel.py  linearlbgfs_again.py  perf_test_linear_pipe.py  simple_tabular_classification.py  simple_tabular_classification_used_cars.py  simple_tabular_classification_used_cars_spark_frame.py  spark-ml-pipe-lgb-light-no-ml-pipe.py  spark-ml-pipe-lgb-light-parallel.py  spark-ml-pipe-lgb-light.py  spark-ml-pipe-lgb.py  spark-ml-pipe-linearlgbfs-no-ml-pipe.py  spark-ml-pipe-linearlgbfs.py  spark-reader-only.py  spark-report-deco.py  spark-reranking.py  spark-simplified-tabular-preset-automl.py  spark_holdout_boostlgbm.py  spark_ml_averaging_transformer.py  spark_ml_lgbadv_boostlgm.py  spark_ml_linear_features.py  spark_ml_linfeat_linearlbfgs.py  spark_ml_multiclass.py  spark_ml_multiclass_linearlbgfs.py  spark_ml_pipe_lgb.py  spark_ml_pipe_linear_lbfgs.py  spark_ml_weighted_blender_transformer.py  spark_to_spark_reader.py  synapseml_again.py  tabular-preset-automl.py
examples/tutorials/: Tutorial_1_basics.ipynb
lightautoml/ml_algo/: base.py  boost_lgbm.py  linear_sklearn.py  utils.py
lightautoml/reader/: base.py
lightautoml/spark/: dataset.py  mlwriters.py  utils.py
lightautoml/transformers/: base.py  categorical.py  datetime.py
lightautoml/utils/: tmp_utils.py
lightautoml/validation/: base.py  utils.py
scala-lightautoml-transformers/: .gitignore  build.sbt  publish.sbt
scala-lightautoml-transformers/project/: plugins.sbt
scala-slama-transformers/: .gitignore  build.sbt
scala-slama-transformers/project/: plugins.sbt
scala-slama-transformers/resources/: data.json  test_data.json
slama/: __init__.py  mlwriters.py  utils.py
slama/automl/: base.py  blend.py
slama/dataset/: base.py  roles.py
slama/ml_algo/: base.py  boost_lgbm.py  linear_pyspark.py
slama/reader/: base.py  guess_roles.py
slama/report/: report_deco.py
slama/tasks/: base.py
slama/transformers/: base.py  categorical.py  datetime.py  decomposition.py  image.py  numeric.py  text.py
slama/validation/: base.py  iterators.py
spark-docs/: SLAMA_minikube_Readme.md  SparkReadme.md
sparklightautoml/: __init__.py  mlwriters.py  spark_functions.py  utils.py
sparklightautoml/automl/: base.py  blend.py
sparklightautoml/computations/: base.py  builder.py  manager.py  parallel.py  sequential.py  utils.py
sparklightautoml/dataset/: base.py  persistence.py  roles.py
sparklightautoml/ml_algo/: base.py  boost_lgbm.py  linear_pyspark.py
sparklightautoml/pipelines/: base.py
sparklightautoml/reader/: base.py  guess_roles.py
sparklightautoml/report/: handy_spark_utils.py  report_deco.py
sparklightautoml/tasks/: base.py
sparklightautoml/transformers/: base.py  categorical.py  datetime.py  decomposition.py  image.py  numeric.py  text.py
supplementary/: spark-checks.py
tests/: conftest.py
(+194 files in other folders)
