[tool.poetry]
name = "SLAMA"
version = "0.1.0"
description = "Fast and customizable framework for automatic ML model creation (AutoML) on Spark"
authors = [
    "Alexander Ryzhkov <alexmryzhkov@gmail.com>",
    "Anton Vakhrushev <btbpanda@gmail.com>",
    "Dmitrii Simakov <dmitryevsimakov@gmail.com>",
    "Rinchin Damdinov <damdinovr@gmail.com>",
    "Vasilii Bunakov <va.bunakov@gmail.com>",
    "Butakov Nikolay alipoov.nb@gmail.com",
    "Gainetdinov Azamat Mr.g.azamat@gmail.com",
    "Teryoshkin Sergey se.teryoshkin@gmail.com",
    "Nasonov Denis denis.nasonov@gmail.com"
]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/sb-ai-lab/SLAMA"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Natural Language :: Russian",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed"
]


[tool.poetry.dependencies]
python = "~3.9"

lightautoml = "0.3.0"


# PySpark
pyspark = "3.2.0"
pyarrow = ">=1.0.0"
synapseml = "0.9.5"
toposort = "1.7"
onnxmltools = "^1.11.0"


[tool.poetry.dev-dependencies]
pytest = "*"
IPython = "*"
notebook = "*"
sphinx = "*"
sphinx-rtd-theme = "*"
nbsphinx = "*"
nbsphinx-link = "*"
sphinx-autodoc-typehints = "*"
pandoc = "*"
pre-commit = "*"
mypy = "^0.910"
tox = "*"
black = "20.8b1"
flake8-docstrings = "1.6.0"
isort = "5.7.0"
flake8 = "4.0.1"


[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"
# force_single_line = true
atomic = true
combine_straight_imports = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
use_parentheses = true
filter_files = true


[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
)/
'''

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py{39}

[gh-actions]
python =
    3.9: py39

[gh-actions:env]
PLATFORM =
    ubuntu-latest: linux
    macos-latest: macos
    windows-latest: windows

[testenv]
whitelist_externals = poetry
commands =
    poetry install
    poetry run pytest tests -v
"""
