[tool.poetry]
name = "SparkLightAutoML"
version = "0.5.0"
description = "Spark-based distribution version of fast and customizable framework for automatic ML model creation (AutoML)"
authors = [
    "Alexander Ryzhkov <alexmryzhkov@gmail.com>",
    "Anton Vakhrushev <btbpanda@gmail.com>",
    "Dmitrii Simakov <dmitryevsimakov@gmail.com>",
    "Rinchin Damdinov <damdinovr@gmail.com>",
    "Alexander Kirilin <adkirilin@gmail.com>",
    "Vasilii Bunakov <va.bunakov@gmail.com>",
    "Nikolay Butakov alipoov.nb@gmail.com",
    "Azamat Gainetdinov Mr.g.azamat@gmail.com",
    "Sergey Teryoshkin se.teryoshkin@gmail.com",
    "Denis Nasonov denis.nasonov@gmail.com"
]
readme = "README.md"
license = "Apache-2.0"
homepage = "https://lightautoml.readthedocs.io/en/latest/"
repository = "https://github.com/sb-ai-lab/SLAMA"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Natural Language :: Russian",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed"
]
packages = [
    { include = "sparklightautoml" }
]


[tool.poetry.dependencies]
python = ">=3.10, <3.13"

poetry-core = "^1.0.0"
lightautoml = "0.4.0"

# PySpark
pyspark = "^3.3.1"
pyarrow = ">=1.0.0"
synapseml = "^1.0.8"
toposort = "1.7"
onnxmltools = "^1.11.0"
weasyprint = {version = "52.5", optional = true}
hdfs = "^2.7.0"

numpy = [
    {version = ">=1.22, <2.0.0"},
]


[tool.poetry.dev-dependencies]
pytest = "*"
sphinx = "*"
sphinx-rtd-theme = "*"
IPython = "*"
nbsphinx = "*"
nbsphinx-link = "*"
sphinx-autodoc-typehints = "*"
pandoc = "*"
pre-commit = "*"
notebook = "*"
mypy = "^0.910"
tox = "*"
hdfs = "^2.7.0"


[tool.poetry.group.dev.dependencies]
kubernetes = "^31.0.0"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"
force_single_line = true
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
use_parentheses = true
filter_files = true


[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
  | supplementary
)/
'''

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py{310, 311}

[gh-actions]
python =
    3.10: py310
    3.11: py311

[gh-actions:env]
PLATFORM =
    ubuntu-latest: linux

[testenv]
allowlist_externals = poetry
commands =
    poetry install
    poetry run pytest tests -v --ignore=tests/spark/unit/test_computations --ignore=tests/spark/unit/transformers
"""
